fix: fixed issue with the inputs on the modal being too wide on some mobile screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -266,7 +266,7 @@ body {
     margin: .5rem 0;
     border-width: 1px;
     border-radius: 5px;
-    width: 21.25rem;
+    width: 90%;
 }
 
 .modal-form input:hover {
